2007-03-10  Till Kamppeter <till.kamppeter@gmail.com>

	* foomatic-rip.in: Replaced sysread() and syswrite() by read() and
	  print() as sysread() and syswrite() is not compatible with the
	  read() and print() of the other operations. See Ubuntu bug #87597
	  (https://launchpad.net/bugs/87597).

2007-02-20  Till Kamppeter <till.kamppeter@gmail.com>

	* foomatic-rip.in: Fixed problem of too high memory consumption
	  when binary output data of GhostScript is read line-wise and
	  does not contain line feeds (Ubuntu bug #85569 with driver
	  "eplaser", Red Hat bug #221194 with driver "lx5000"). Applied
	  same fix also to binary non-PostScript input data (only relevant
	  for non-CUPS printing systems).

	* README, USAGE, foomatic-rip.in, foomatic-rip.1.in, beh.in,
	  foomatic-gswrapper.1.in, debian/copyright, debian/control,
	  debian/README.Debian: Replaced "linuxprinting.org" by
	  "openprinting.org" or "OpenPrinting".

2006-10-03  Till Kamppeter <till.kamppeter@gmail.com>

	* foomatic-rip.in: Fixed bashism.

2006-08-27  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-gswrapper.in: Support for built-in redirection of
	  standard output of PostScript programs ("-sstdout=%stderr") in
	  newer GhostScript versions. More reliable then using /dev/fd/3
	  (not always available, difficult to check presence) or '|cat >3'
	  (not seekable and some GhostScript output devices require
	  seekability of the output file),

2006-07-10  Norm Jacobs <Norm.Jacobs@Sun.COM>

	* *: Removed executable permissions from source files which are
	  not executables

2006-06-15  Norm Jacobs <Norm.Jacobs@Sun.COM>

	* foomatic-rip.in: failing to open IPP attributes file shouldn't be
	  fatal

2006-06-01  Norm Jacobs <Norm.Jacobs@Sun.COM>

	* filter.conf: example of a preferred shell setting

	* foomatid-rip.in: detect and use a "modern" shell for shell commands

2006-05-17  Norm Jacobs <Norm.Jacobs@Sun.COM>

	* foomatic-rip.in: Add support for Solaris LP, made default echo,